# open62541

./: .gitignore  CMakeLists.txt
arch/posix/: ua_architecture.h
examples/: CMakeLists.txt  server_repeated_job.c  tutorial_server_object.c
examples/encryption/: client_basic128rsa15.c
examples/gds/: administration_component.c  gds_client.c  gds_server.c  standalone_opc_server.c
examples/machine/: CMakeLists.txt  MachineIM.xml  sharedMemoryRead.c  sharedMemoryRead.h  tripleBufferRead.c  tripleBufferRead.h  tutorial_client.c  tutorial_client_alarms_conditions.c  tutorial_client_events_custom_IM.c  tutorial_client_historical_data_access.c  tutorial_client_methodcall.c  tutorial_client_read_write.c  tutorial_client_subscription_datachange.c  tutorial_server.c  tutorial_server_alarms_conditions_simplified.c  tutorial_server_events_custom_IM.c  tutorial_server_historical_data_access.c  tutorial_server_information_model.c  tutorial_server_methodcall.c  tutorial_server_read_write.c  tutorial_server_subscription_datachange.c
examples/machine/plcApplication/: CMakeLists.txt  Readme.txt  plcSharedMemoryWriter.c  sharedMemoryWrite.h  tripleBufferWrite.c  tripleBufferWrite.h
include/: ua_server.h  ua_server_config.h
include/open62541/: client.h  (+5 more)
plugins/: ua_ca_gnutls.c  ua_config_default.c  ua_network_pubsub_mqtt.c  ua_network_pubsub_mqtt.h  ua_pki_certificate.c  ua_pki_certificate.h  ua_pubsub_ethernet.c  ua_pubsub_ethernet_xdp.c  ua_pubsub_realtime.c  ua_pubsub_udp.c  ua_pubsub_xdprecv_ethernet.c
src/: ua_timer.c  ua_timer.h
tests/: CMakeLists.txt  check_timer.c
(+77 files in other folders)
